rough attempt at first lesson

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
 </head>
 <body>
-
+    <form action="">
+        User ID:<br>
+        <input type="text" name="login"><br>
+        Password:<br>
+        <input type="password" name="password"><br>
+        <input type="submit" value="Gogogo!!!">
+    </form>
 </body>
 </html>
