changes from first lesson

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Page</title>
-</head>
-<body>
-    <form action="">
-        User ID:<br>
-        <input type="text" name="login"><br>
-        Password:<br>
-        <input type="password" name="password"><br>
-        <input type="submit" value="Gogogo!!!">
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Home Page</title>
+    </head>
+    <body>
+        <form action="/login/" method="post">
+            User ID:<br>
+            <input type="text" name="login"><br>
+            Password:<br>
+            <input type="password" name="password"><br>
+            <input type="submit" value="Gogogo!!!">
+        </form>
+    </body>
 </html>
