finished Bootstrap and logout

--- a/templates/user.html
+++ b/templates/user.html
@@ -18,7 +18,9 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Page 1</a></li>
                 <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+                <li><a href="/logout/">Log out</a></li>
             </ul>
         </div>
     </nav>
@@ -45,19 +47,64 @@
             <div class="col-md-4">
                 <h3>Web Resources</h3>
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href="http://www.w3schools.com/"><strong>W3Schools</strong></a> One of the best reference
+                        and learning sites for general web technologies such as HTML, CSS, JavaScript, and even some
+                        specific libraries like Bootstrap and JQuery.
+                    </li>
+                    <li><a href="https://www.heroku.com"><strong>Heroku</strong></a>
+                    </li>
+                    <li><a href="https://www.reddit.com/r/learnjavascript"><strong>Learn JavaScript Sub Reddit</strong>
+                        </a> <a href="https://www.reddit.com/">Reddit</a> is full of interesting topics. Pick one you
+                        like and go! The learn JavaScript link is the place where you can post questions even if you
+                        don't have time to put as much structure into it for something like a question on StackOverflow.
+                    </li>
+                    <li><a href="http://stackoverflow.com/"><strong>StackOverflow</strong></a> If you Google a question
+                        and one of the results is a StackEchange site, then that's likely the best answer. Most of the
+                        time, StackOverflow is the one you'll be interested in since it covers question and answer for
+                        specific programming problems, software algorithms, coding techniques, software development
+                        tools, but there is also a StackExchange for
+                        <a href="http://codereview.stackexchange.com/">Code Review</a>,
+                        <a href="http://superuser.com/">Super User</a> (questions about enterprise desktop software),
+                        <a href="http://serverfault.com/">Server Fault</a> (for system administrators and IT
+                        professionals, people who manage or maintain computers in a professional capacity), and many
+                        more. The only downside to these sites is that if you ask your own question, you need to follow
+                        the rules for question quality. Take the tours on any of these sites when you create your
+                        account, and you'll be all set.
+                    </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h3>Python and Flask</h3>
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href="https://docs.python.org/3/"><strong>Python.org Docs</strong></a> The official
+                        documentation is quite good. While sometimes a Google search followed by clicking the first
+                        Stack Overflow link will get you more obscure specific advice, if you're wondering about usage
+                        of the standard library, you should consider looking here first. See the module docs for
+                        <a href="https://docs.python.org/3/library/sqlite3.html">SQLite3</a> or
+                        <a href="https://docs.python.org/3/library/stdtypes.html">built-in types</a>.
+                    </li>
+                    <li><a href="http://flask.pocoo.org/"><strong>Flask Docs</strong></a> This guide is easy to follow,
+                        possibly in part due to the simplicity of Flask itself. The
+                        <a href="http://flask.pocoo.org/docs/quickstart/">Quickstart Guide</a> is a pretty good place
+                        to learn.
+                    </li>
+                    <li><a href="http://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world">
+                        <strong>Flask Mega Tutorial</strong></a> Miguel Grinberg has a fantasic tutorial on Flask which
+                        has now been published as a <a href="http://flaskbook.com/">book</a> as well. Like this demo
+                        project, it is broken into sections using Git tags.
+                    </li>
+                    <li><a href="http://pythoncentral.io/advanced-sqlite-usage-in-python/"><strong>Advanced SQLite
+                        </strong></a> Python Central has a lot of good tutorials on advanced topics such as SQLAlchemy
+                        (an ORM not used in this tutorial), but this particular tutorial talks about a number of great
+                        subjects such as defining a SQL function in Python, dealing with dates in SQL as objects once
+                        they are in Python, and the executescript method.
+                    </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h3>Git and misc</h3>
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href="http://rogerdudler.github.io/git-guide/"><strong>GIT Guide</strong></a></li>
                 </ul>
             </div>
         </div>
